fix: catalogue cover header text alignment

--- a/ss-website/src/pages/Catalogue.module.css
+++ b/ss-website/src/pages/Catalogue.module.css
@@ -145,6 +145,8 @@
 .headerTextGroup {
     display: flex;
     flex-direction: column;
+    text-align: left;
+    align-items: flex-start;
 }
 
 .coverTitle {
